--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ body{
     background:linear-gradient(
         rgba(77, 150, 168, 0.85), 
         rgba(77, 150, 168, 0.85)
-      ), url('/assets/desktop/image-footer.jpg');
+      ), url('/Meet-Landing-Page/assets/desktop/image-footer.jpg');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center center;              
@@ -227,12 +227,12 @@ body{
     align-items: center;
     z-index: -1000;
     /* margin-top: -80px; */
-}
+} 
 
 .footer{
     display: flex;
-   z-index: -2;
-    position: absolute;
+   /* z-index: -2; */
+    /* position: absolute; */
     top: 0;
     left: 0;
     width: 100%;
