--- a/style.css
+++ b/style.css
@@ -87,8 +87,6 @@ body{
 
 .hero--button--container{
     display: flex;
-    /* justify-content: space-evenly;
-    align-items: stretch; */
     gap: 15px;
 }
 
@@ -225,7 +223,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: -1000;
+    /* z-index: -1000; */
     /* margin-top: -80px; */
 } 
 
@@ -264,13 +262,20 @@ body{
     color: #fff;
 }
 
+/* button{
+    cursor: pointer;
+} */
+
 .footer--btn{
     cursor: pointer;
     background-color: #855FB1;
     color: #fff;
+    /* z-index: 5; */
 }
+
+
 .footer--btn:hover{
-    background-color: rgb(133, 95, 177,0.55);
+    background-color: #B18BDD;
 }
 
 
