--- a/style.css
+++ b/style.css
@@ -127,6 +127,8 @@ body{
     font-weight:900;
     color: #87879D;
     margin-bottom: 55px;
+    /* position: relative; */
+    z-index: 1;
 }
 
 .number--one::before{
@@ -185,14 +187,16 @@ body{
 
 .numbered--two{
     margin-bottom: -80px;
-    z-index: 4 !important;
+    position: relative;
+    /* z-index: 4 ; */
 }
+
 
 .number--two::before{
     content: '';
     display: block;
     position: absolute;
-    z-index: 1;
+    z-index: 10;
     bottom: 110px;
     border-left: 1px solid rgba(135, 135, 157, 0.25);
     height: 84px;
@@ -211,6 +215,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    /* z-index: -1; */
 } 
 
 .footer{
@@ -221,7 +226,8 @@ body{
     height: 100%;
     justify-content: center; 
     align-items: center;
-   
+    /* position: relative; */
+    /* z-index: -1; */
 
 }
 
