--- a/style.css
+++ b/style.css
@@ -169,6 +169,8 @@ body{
     font-weight: 800;
     letter-spacing: 4px;
 }
+
+
 .about--header{
     font-size:44PX;
     font-weight: 800;
@@ -185,21 +187,22 @@ body{
     text-align:center;
 }
 
-.numbered--two{
-    margin-bottom: -80px;
+.number--two{
+    margin-bottom: -30px;
     position: relative;
-    /* z-index: 4 ; */
+    background-color: #fff;
 }
 
 
 .number--two::before{
     content: '';
-    display: block;
+    /* display: block; */
     position: absolute;
-    z-index: 10;
-    bottom: 110px;
+    /* z-index: 10; */
+    bottom: 55px;
     border-left: 1px solid rgba(135, 135, 157, 0.25);
     height: 84px;
+    /* z-index: 5; */
 }
 
 .footer--wrapper{
@@ -215,7 +218,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* z-index: -1; */
+    /* z-index: -1; */ 
 } 
 
 .footer{
